<resources>
    <string name="app_name">NewsFeed</string>
    <string name="news_author">Author</string>
    <string name="news_source">Source</string>
    <string name="news_title">Title</string>
    <string name="published_date">Published Date</string>
    <string name="top_headline">Top Headlines</string>
    <string name="category">Category</string>
    <string name="category_business">Business</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_health">Health</string>
    <string name="category_science">Science</string>
    <string name="category_sport">Sports</string>
    <string name="category_technology">Technology</string>
    <string name="settings">Settings</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="no_author_message">No author</string>
    <string name="no_news">No News available</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="send_link">Send link via</string>
    <string name="settings_news_location">News base on Country</string>
    <string name="news_location_key" translatable="false">country</string>
    <string name="news_location_default_value" translatable="false">@string/news_location_ng_value</string>

    <string name="news_location_ng_label">Nigeria</string>
    <string name="news_location_ng_value" translatable="false">ng</string>

    <string name="news_location_us_label">United States</string>
    <string name="news_location_us_value" translatable="false">us</string>

    <string name="news_location_gb_label">United Kingdom</string>
    <string name="news_location_gb_value" translatable="false">gb</string>

    <string name="news_location_ca_label">Canada</string>
    <string name="news_location_ca_value" translatable="false">ca</string>

    <string name="news_location_au_label">Australia</string>
    <string name="news_location_au_value" translatable="false">au</string>
</resources>
